--- a/npm/package.json
+++ b/npm/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "fbx2gltf",
-  "version": "0.9.4",
+  "name": "@robertlong/fbx2gltf",
+  "version": "0.10.2",
   "description": "Node wrapper around FBX2glTF tools.",
   "main": "index.js",
   "repository": {
